# coursera-data-engineering-with-rust

./: README.md
module-1/vector-fruit-salad/: Cargo.toml
module-1/vector-fruit-salad/src/: lib.rs  main.rs
module-1/word-frequency/: Cargo.toml  stop-words.txt
module-1/word-frequency/src/: frequency.rs  lib.rs  main.rs  tokenizer.rs
module-2/dining-philosophers/: Cargo.toml
module-2/dining-philosophers/src/: kitchen.rs  lib.rs  locked_resource.rs  main.rs  philosopher.rs
module-2/fruit-vector-lab/: Cargo.toml
module-2/fruit-vector-lab/src/: main.rs
module-2/mutex-lab/: Cargo.toml
module-2/mutex-lab/src/: main.rs
