[package]
name = "vector-fruit-salad"
version = "0.1.0"
edition = "2024"
authors = [ "Henrik Arro" ]
description = "An example of how to use command-line arguments and randomize vectors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
rand = "0.9.2"